--- a/src/main/resources/templates/chemicals_add.html
+++ b/src/main/resources/templates/chemicals_add.html
@@ -1,43 +1,73 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <title>Modelmate - Models</title>
-    <link rel="stylesheet" href="/styles.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Modelmate - List of All Models</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
 <header>
-    <h1>Modelmate</h1>
-    <nav>
-        <a href="/models/">Home (Models)</a> |
-        <a href="/colors/">Colors List</a> |
-        <a href="/chemicals/">Chemicals List</a> |
-        <a href="/users/" sec:authorize="hasRole('ROLE_ADMIN')">Users |</a>
-        <a href="/admin" sec:authorize="hasRole('ROLE_ADMIN')">Admin Section |</a>
-        <form th:action="@{/logout}" method="post" style="display: inline;">
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-            <button type="submit" class="nav-button">Logout</button>
-        </form>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/models/">Modelmate</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/models/">Home (Models)</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/colors/">Colors List</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/chemicals/">Chemicals List</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+                        <a class="nav-link" href="/users/">Users</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+                        <a class="nav-link" href="/admin">Admin Section</a>
+                    </li>
+                    <li class="nav-item">
+                        <form th:action="@{/logout}" method="post" class="d-inline">
+                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                            <button type="submit" class="btn btn-danger btn-sm ms-2">Logout</button>
+                        </form>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 </header>
-<main>
+<main class="container">
     <h2 th:text="${chemical.id} ? 'Edit Chemical' : 'Add New Chemical'">Add New Chemical</h2>
-    <form th:action="@{/chemicals/save}" th:object="${chemical}" method="post">
-        <input type="hidden" th:field="*{id}"/>
-        <p>
-            <label>Name:</label>
-            <input type="text" th:field="*{name}"/>
-        </p>
-        <p>
-            <label>Brand:</label>
-            <input type="text" th:field="*{brand}"/>
-        </p>
-        <p>
-            <label>Type:</label>
-            <input type="text" th:field="*{type}"/>
-        </p>
-        <button type="submit">Save</button>
+    <form th:action="@{/chemicals/save}" th:object="${chemical}" method="post" class="card">
+        <div class="card-body">
+            <input type="hidden" th:field="*{id}"/>
+            <div>
+                <label for="name">Name:</label>
+                <input type="text" id="name" th:field="*{name}" />
+                <div th:if="${#fields.hasErrors('name')}" class="error" th:errors="*{name}"></div>
+            </div>
+            <div>
+                <label for="brand">Brand:</label>
+                <input type="text" id="brand" th:field="*{brand}" />
+                <div th:if="${#fields.hasErrors('brand')}" class="error" th:errors="*{brand}"></div>
+            </div>
+            <div>
+                <label for="type">Type:</label>
+                <input type="text" id="type" th:field="*{type}" />
+                <div th:if="${#fields.hasErrors('type')}" class="error" th:errors="*{type}"></div>
+            </div>
+            <button type="submit" class="btn btn-primary">Save</button>
+            <a href="/chemicals/" class="btn btn-secondary ms-2">Back to Chemicals List</a>
+        </div>
     </form>
-    <a href="/chemicals/">Back to Chemicals List</a>
 </main>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
