--- a/src/main/resources/templates/chemicals_list.html
+++ b/src/main/resources/templates/chemicals_list.html
@@ -1,28 +1,53 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <title>Modelmate - Models</title>
-    <link rel="stylesheet" href="/styles.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Modelmate - List of All Chemicals</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
 <header>
-    <h1>Modelmate</h1>
-    <nav>
-        <a href="/models/">Home (Models)</a> |
-        <a href="/colors/">Colors List</a> |
-        <a href="/chemicals/">Chemicals List</a> |
-        <a href="/users/" sec:authorize="hasRole('ROLE_ADMIN')">Users |</a>
-        <a href="/admin" sec:authorize="hasRole('ROLE_ADMIN')">Admin Section |</a>
-        <form th:action="@{/logout}" method="post" style="display: inline;">
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-            <button type="submit" class="nav-button">Logout</button>
-        </form>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/models/">Modelmate</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/models/">Home (Models)</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/colors/">Colors List</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/chemicals/">Chemicals List</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+                        <a class="nav-link" href="/users/">Users</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+                        <a class="nav-link" href="/admin">Admin Section</a>
+                    </li>
+                    <li class="nav-item">
+                        <form th:action="@{/logout}" method="post" class="d-inline">
+                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                            <button type="submit" class="btn btn-danger btn-sm ms-2">Logout</button>
+                        </form>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 </header>
-<main>
+<main class="container">
     <h2>List of All Chemicals</h2>
-    <a href="/chemicals/add">Add New Chemical</a>
-    <table>
+    <a href="/chemicals/add" class="btn btn-primary mb-3">Add New Chemical</a>
+    <table class="table">
+        <thead>
         <tr>
             <th>No</th>
             <th>Name</th>
@@ -30,18 +55,22 @@
             <th>Type</th>
             <th>Actions</th>
         </tr>
+        </thead>
+        <tbody>
         <tr th:each="chemical, iter : ${chemicals}">
             <td th:text="${iter.count}">No</td>
             <td th:text="${chemical.name}">Name</td>
             <td th:text="${chemical.brand}">Brand</td>
             <td th:text="${chemical.type}">Type</td>
             <td>
-                <a th:href="@{/chemicals/{id}(id=${chemical.id})}">View</a>
-                <a th:href="@{/chemicals/{id}/edit(id=${chemical.id})}">Edit</a>
-                <a th:href="@{/chemicals/{id}/delete(id=${chemical.id})}">Delete</a>
+                <a th:href="@{/chemicals/{id}(id=${chemical.id})}" class="btn btn-primary btn-sm">View</a>
+                <a th:href="@{/chemicals/{id}/edit(id=${chemical.id})}" class="btn btn-primary btn-sm ms-1">Edit</a>
+                <a th:href="@{/chemicals/{id}/delete(id=${chemical.id})}" class="btn btn-danger btn-sm ms-1">Delete</a>
             </td>
         </tr>
+        </tbody>
     </table>
 </main>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
